--- a/design/m/sliderpage/canada/css/style.css
+++ b/design/m/sliderpage/canada/css/style.css
@@ -20,7 +20,6 @@ body {
   height: 100%;
 }
 
-
 .card {
   display: block;
   position: absolute;
@@ -30,6 +29,7 @@ body {
   background-color: #fff;
   border-radius: 15px;
   height: 600px;
+  text-align: center;
 
   box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.2);
 
@@ -61,6 +61,7 @@ body {
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
   color: #fff;
+  font-size: 24px;
 }
 
 .card__header--first {
@@ -120,26 +121,28 @@ body {
 
 .card__price {
   float: right;
-  font-size: 16px;
   font-weight: 300;
+  font-size: 16px
 }
 
 .card__title {
   margin: 35px 0 20px;
   font-size: 30px;
   line-height: 1.1em;
-  font-weight: semi-bold;
+  font-weight: bolder;
 }
 
 .card__subtitle {
   display: block;
-  font-size: 13px;
+  font-size: 24px;
   font-weight: 300;
+  line-height: normal;
+  vert-align: middle;
 }
 
 .card__body {
   position: relative;
-  padding: 40px 30px 20px;
+  padding: 30px 30px 20px;
 }
 
 .card__image {
@@ -158,11 +161,11 @@ body {
 
 .card__wish-list {
   display: block;
-  width: 50%;
-  margin: 0 auto 15px;
-  padding: 15px;
+  width: 80%;
+  margin: 0 auto 14px;
+  padding: 10px;
   border: 2px solid #fff;
-  border-radius: 20px;
+  border-radius: 7.5px;
   text-align: center;
   text-transform: uppercase;
   font-size: 14px;
@@ -190,13 +193,13 @@ body {
 
 .card__category {
   display: block;
-  font-size: 12px;
+  font-size: 18px;
   color: #AEAEAE;
   text-transform: uppercase;
   text-align: center;
 }
 
-.card__will-animate {
+.card__will-animate  {
   will-change: transform;
 }
 
