--- a/design/Bisht/quiz/assets/css/main.css
+++ b/design/Bisht/quiz/assets/css/main.css
@@ -6,7 +6,7 @@ body{
 #container{
     margin : 20px auto;
     background-color: white;
-    height: 300px;
+    height: 375px;
     width : 700px;
     border-radius: 5px;
     box-shadow: 0px 5px 15px 0px;
@@ -23,7 +23,7 @@ body{
     cursor: pointer;
     position: absolute;
     left:300px;
-    top:50px;
+    top:75px;
     color : lightgrey;
 }
 #start:hover{
@@ -72,7 +72,24 @@ body{
     border-radius: 5px;
     cursor: pointer;
     padding : 5px;
+    margin: 2px;
 }
+#submit_button{
+    display: inline-block;
+    width : 80px;
+    text-align: center;
+    border : 1px solid grey;
+    border-radius: 5px;
+    cursor: pointer;
+    padding : 5px;
+
+}
+
+#submit_button:hover{
+    border: 2px solid grey;
+    font-weight: bold;
+}
+
 .choice:hover{
     border : 2px solid grey;
     font-weight: bold;
@@ -120,6 +137,17 @@ body{
     margin-right : 5px;
 }
 #scoreContainer{
+    margin : 20px auto;
+    background-color: white;
+    opacity: 0.8;
+    height: 300px;
+    width : 700px;
+    border-radius: 5px;
+    box-shadow: 0px 5px 15px 0px;
+    position: relative;
+    display: none;
+}
+#explanation_container{
     margin : 20px auto;
     background-color: white;
     opacity: 0.8;
